--- a/src/javascrit_vanilla/index.html
+++ b/src/javascrit_vanilla/index.html
@@ -11,6 +11,13 @@
     <title>Document</title>
 </head>
 <body>
+  <div class="carousel-item">
+      <div class="carousel-item__details"></div>
+  </div>
+  <div class="carousel-item">
+    <div class="carousel-item__details"></div>
+  </div>
+
     
     <div id="app"> bloque </div>
     <script src="index.js" type="module"></script>    
