se introdujo los carrossel

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
 
     <section class= "Carrossel_1">
       <h1>Carrossel_1</h1>
+      <div id="app_2"></div>
 
     </section>
 
@@ -86,6 +87,7 @@
 
     <section class= "Carrossel_1">
       <h1>Carrossel_1</h1>
+      <div id="app_1"></div>
 
     </section>
 
@@ -196,6 +198,6 @@
 
         
     <div id="main"></div>
-    
+    <script type="module" src="../src/javascrit_vanilla/index.js"></script>    
 </body>
 </html>
