--- a/src/javascrit_vanilla/index.html
+++ b/src/javascrit_vanilla/index.html
@@ -11,38 +11,16 @@
     <title>Document</title>
 </head>
 <body>
-  <div class="carousel-item">
-      <div class="carousel-item__details"></div>
+  <!-- <div class="carousel-item">
+    <div id="app"></div>
+    <div class="carousel-item__details">
+    </div>
   </div>
-  <div class="carousel-item">
-    <div class="carousel-item__details"></div>
-  </div>
+  <script type="module" src="index.js"></script> -->
+  <div class="main_contenedor">
+    <div id="app"></div>
 
-    
-    <div id="app"> bloque </div>
-    <script src="index.js" type="module"></script>    
+    <script type="module" src="index.js"></script>
+  </div>
 </body>
 </html>
-
-
-<!-- <section class="carousel">
-    <div class="carousel__container">
-  
-      <div class="carousel-item">
-        <div id="app"></div>
-        <div class="carousel-item__details">
-          <div>
-            <img class="carousel-item__details--img"
-             src="./" alt="Play Icon"> 
-            <img class="carousel-item__details--img" 
-            src="./" alt="Plus Icon"> 
-          </div>
-          <p class="carousel-item__details--title">
-              Título descriptivo
-          </p>
-          <p class="carousel-item__details--subtitle">
-              2019 16+ 114 minutos
-          </p>
-        </div>
-     </div>
-</section> -->
